Server fix, Server emit & sketch change to draw

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>NEOPIXEL Web</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <h1>Hej dit svin</h1>
-    
+    <h1>Hej dig</h1>
+
     <ol>Tissemand</ol>
     <ol>Penis</ol>
     <ol>Pik</ol>
@@ -34,8 +34,7 @@
     <ol>Skaftet</ol>
     <ol>Fjollestangen</ol>
 
-    <h1 id="ip">10.128.192.161:3000</h1>
-
+    <h1 id="ip">10.128.192.16322421:3000</h1>
 </body>
 
 </html>
